<resources>
    <string name="app_name">SportKotlinProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_family">Enter family</string>
    <string name="training">Training</string>
    <string name="food">Food</string>
    <string name="header_image">Header image</string>
    <string name="set">Set</string>
    <string name="iteration">Iteration</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>